[refactor] code formatting